--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Lexi was here
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>GLAS<title>
+</head>
+<body>
+  <h1>Hello, World!</h1>
+</body>
+</html>
